# Lattice

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.cargo/: config.toml
crates/channel/: Cargo.toml
crates/channel/src/: channel.rs  enclave.rs  lib.rs  op.rs  proxy.rs
crates/channel/src/proxy/: client.rs
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/clint/: Cargo.toml
crates/clint/src/: lib.rs
crates/console/: Cargo.toml  build.rs
crates/console/src/: console.rs  lib.rs  uart.rs
crates/context/: Cargo.toml
crates/context/src/: lib.rs
crates/data_structure/src/: array_alloc.rs  intrusive_list.rs  lib.rs  linked_list.rs  maple_tree.rs
crates/device/: Cargo.toml
crates/device/examples/: parse_clint.rs  parse_memory.rs  parse_uart.rs  update_memory.rs
crates/device/fdt/src/: lib.rs  node.rs
crates/device/src/: cpu.rs  device.rs  dma.rs  lib.rs  mmio.rs
crates/elf-loader/: Cargo.toml
crates/elf-loader/src/: dynamic.rs  elf_object.rs  elf_relocate.rs  error.rs  helper.rs  lib.rs  loader.rs  pm_loader.rs
crates/elf/src/: lib.rs
crates/enclave/: Cargo.toml
crates/enclave/src/: builder.rs  ctl.rs  ecall.rs  layout.rs  lde.rs  lib.rs  lse.rs  lue.rs  node.rs
crates/extension/: Cargo.toml
crates/extension/src/: lib.rs
crates/hsm/: Cargo.toml
crates/hsm/src/: lib.rs
crates/htee_channel/: Cargo.toml
crates/htee_channel/src/: enclave.rs  info.rs  proxy.rs
crates/htee_channel/src/proxy/: client.rs
crates/htee_client/: Cargo.toml  example.toml
crates/htee_client/.cargo/: config.toml
crates/htee_client/src/: alloc.rs  config.rs  ctl.rs  loader.rs  main.rs  page.rs
crates/htee_console/: Cargo.toml
crates/htee_console/src/: log_print.rs  uart.rs
crates/htee_device/: Cargo.toml
crates/htee_device/examples/: parse_clint.rs  parse_memory.rs  parse_uart.rs  update_memory.rs
crates/htee_device/fdt/src/: parsing.rs  update.rs
crates/htee_device/src/: console.rs  error.rs  helper.rs  pmu.rs
crates/htee_device/src/dma/: axi.rs
crates/htee_linkedlist/: Cargo.toml
crates/htee_linkedlist/src/: iter.rs  lib.rs
crates/htee_macro/: Cargo.toml
crates/htee_macro/src/: lib.rs
crates/htee_mempool/: Cargo.toml
crates/htee_mempool/src/: alloc.rs  lib.rs  map.rs
crates/htee_vstack/: Cargo.toml
crates/htee_vstack/src/: lib.rs
crates/linkedlist/src/: linked_list.rs
crates/load_module/: Cargo.toml
crates/load_module/src/: lib.rs  symbol.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/mempool/: Cargo.toml
crates/mempool/src/: lib.rs
crates/nostd-rbtree/: Cargo.toml
crates/nostd-rbtree/src/: lib.rs
crates/perf/: Cargo.toml
crates/perf/src/: lib.rs
crates/platform/: Cargo.toml
crates/platform/src/: lib.rs
crates/pma/: Cargo.toml
crates/pma/src/: lib.rs  prop.rs  rbtree_ext.rs
crates/pmp/: Cargo.toml
crates/pmp/src/: cache.rs  lib.rs
crates/riscv/src/: register.rs
crates/riscv/src/register/: macros.rs  mcountinhibit.rs  pmpaddrx.rs  pmpcfgx.rs  satp.rs  sstatus.rs
crates/rt/: Cargo.toml
crates/rt/.cargo/: config.toml
crates/rt/src/: console.rs  consts.rs  context.rs  error.rs  frame.rs  heap.rs  kernel.rs  ldesym.rs  lib.rs  loader.rs  macros.rs  mem.rs  pt.rs  scratch.rs  stack.rs  task.rs  trampoline.rs  trap.rs  usr.rs
crates/rt/src/syscall/: file.rs  linux_wrap.rs  mem.rs  misc.rs  mod.rs  task.rs  time.rs
crates/sbi/: Cargo.toml
crates/sbi/src/: ecall.rs  lib.rs  macros.rs  profiling.rs  scratch.rs  trap.rs
crates/sm/: Cargo.toml
crates/sm/src/: clint.rs  consts.rs  device.rs  dma.rs  ecall.rs  enclave.rs  error.rs  hart.rs  heap.rs  helper.rs  init.rs  inst_ext.rs  lib.rs  platform.rs  pma.rs  pmp.rs  pt.rs  sm.rs  trap.rs
crates/test_launcher/: Cargo.toml
crates/test_launcher/.cargo/: config.toml
crates/test_launcher/src/: main.rs
crates/trap_proxy/: Cargo.toml
crates/trap_proxy/src/: lib.rs
crates/uart/: Cargo.toml
crates/uart/src/: lib.rs
crates/vm/: Cargo.toml
crates/vm/src/: allocator.rs  lib.rs  mm.rs  page_table.rs  pm.rs  translate.rs  vm.rs
crates/vstack/: Cargo.toml
firmware/fw-lde-rt/: Cargo.toml  build.rs
firmware/fw-lde-rt/src/: main.rs
firmware/fw-loader/: Cargo.toml  build.rs
firmware/fw-loader/src/: main.rs  payload.rs  reloc.rs
firmware/fw-rt/: Cargo.toml
firmware/fw-rt/src/: main.rs
firmware/fw-sm/: Cargo.toml  build.rs
firmware/fw-sm/.cargo/: config.toml
firmware/fw-sm/src/: console.rs  init.rs  main.rs  trap.rs
linux/driver/: Makefile  simple_ioctl_driver.c
linux/driver/user/: user_ioctl.c
linux/driver/user/include/: user_ioctl.h
linux/include/: ecall.h  lde.h  lue.h  vstack.h
linux/include/shim_module/copy_from_user/: Makefile  copy_from_user.c
linux/include/shim_module/copy_to_user/: Makefile  copy_to_user.c
linux/lib/: lde.c  vstack.c
linux/modules/example_ioctl/: Makefile  main.c  user.c
linux/modules/tee_mod/: Makefile  main.c
platform/: Cargo.toml
platform/qemu-virt/: Cargo.toml  build.rs  firmware.mk  linker.ld  qemu.patch
platform/qemu-virt/.cargo/: config.toml
platform/qemu-virt/src/: main.rs
platform/src/: lib.rs
runtime/: Cargo.toml  Makefile
runtime/src/: console.rs  main.rs
