[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rt = { path = "../crates/rt" }
spin = "0.9.8"
uart_16550 = "0.3.1"
vm = { path = "../crates/vm" }
vstack = {path = "../crates/vstack"}
channel = {path = "../crates/channel"}

[target.'riscv64imac-unknown-none-elf'.linker]
rustflags = ["-C", "link-arg=-Wl,--relax"]
