[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
channel = { path = "../channel" }
vstack = { path = "../vstack" }

clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1.0.214", features = ["derive"] }
toml = "0.8.19"
libc = "0.2"
nix = "0.29.0"
