[package]
name = "enclave"
version = "0.1.0"
edition = "2024"

[dependencies]
data_structure = { workspace = true }
console = { workspace = true }
device = { workspace = true }
channel = { workspace = true }
riscv = { workspace = true }
vm = { workspace = true }
sbi = { workspace = true }
context = { workspace = true }
pma = { path = "../pma" }
pmp = { path = "../pmp" }
clint = { path = "../clint" }
hsm = { path = "../hsm" }
perf = { path = "../perf" }
spin = { workspace = true }
md5 = { version = "0.7.0", default-features = false }
heapless = { workspace = true }