[package]
name = "sm"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["v1-20"]
v1-11 = []
v1-20 = []

[dependencies]
sbi = { path = "../sbi" }
data_structure = { path = "../data_structure" }
nostd-rbtree = { path = "../nostd-rbtree" }
vm = { path = "../vm" }
channel = { path = "../channel" }
macros = { path = "../macros" }
device = { path = "../device" }
console = { path = "../console"}
context = { workspace = true }
enclave = { path = "../enclave" }
fdt = "0.1.5"
riscv = { workspace = true }
spin = "0.9.8"
# log = "0.4.20"
bit_field = "0.10.2"
thiserror = { version = "1.0", package = "thiserror-core", default-features = false }
heapless = { workspace = true }
# extension = { path = "../extension" }
pma = { path = "../pma" }
clint = { path = "../clint" }
hsm = { path = "../hsm" }
pmp = { path = "../pmp" }
trap_proxy = { path = "../trap_proxy" }
platform = { path = "../platform" }
md5 = { version = "0.7.0", default-features = false }
