[package]
name = "fw-lde-rt"
version = "0.1.0"
edition = "2024"

[dependencies]
# log = "0.4.22"
rt = { path = "../../crates/rt" }
spin = "0.9.8"
uart_16550 = "0.3.1"
vm = { path = "../../crates/vm" }
htee_vstack = {path = "../../crates/htee_vstack"}
htee_channel = {path = "../../crates/htee_channel"}
htee_console = { workspace = true }

[target.'riscv64imac-unknown-none-elf'.linker]
rustflags = ["-C", "link-arg=-Wl,--relax"]
