[package]
name = "fw-loader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
htee_macro = { path = "../../crates/htee_macro" }
# htee_device = { path = "../../htee_device" }
# htee_console = { path = "../../htee_console" }

sm = { path = "../../crates/sm" }
sbi = { path = "../../crates/sbi" }
# log = "0.4"
spin = "0.9.8"
riscv = { workspace = true }
