[package]
name = "fw-rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# log = "0.4.22"
rcore-console = "0.0.0"
rt = { path = "../../crates/rt" }
spin = "0.9.8"
uart_16550 = "0.3.1"
vm = { path = "../../crates/vm" }
htee_vstack = {path = "../../crates/htee_vstack"}
htee_channel = {path = "../../crates/htee_channel"}

[target.'riscv64imac-unknown-none-elf'.linker]
rustflags = ["-C", "link-arg=-Wl,--relax"]
